updated typography on case study pages

--- a/arresteddevelopmentgame.html
+++ b/arresteddevelopmentgame.html
@@ -104,7 +104,7 @@
 						</div>
 						<li class="margin-bottom-20">
 							<h6 class="heading-uppercase no-margin">Tech Used</h6>
-							<span>React, Bootstrap, Yarn NPM package, Github Pages, HTML5, CSS, Javascript</span>
+							<p>React, Bootstrap, Yarn NPM package, Github Pages, HTML5, CSS, Javascript</p>
 						</li>
 						<li>
 							<h6 class="heading-uppercase no-margin">Project Links</h6>
@@ -137,7 +137,7 @@
 	</div>
 
 	<footer>
-		<div class="footer bg-grey">
+		<div class="footer bg-dark">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-12 col-md-6 text-center text-md-left">
