--- a/hallobaloo.html
+++ b/hallobaloo.html
@@ -104,19 +104,19 @@
                             <p>A Halloween music festival in Honolulu, Hawaii. I designed the logo and brand materials
                                 including posters, flyers, web design, web banners, t-shirts, and signage.</p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Wall to Wall Studios</span>
+                            <p>Wall to Wall Studios</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator, Adobe Photoshop, Adobe Indesign</span>
+                            <p>Adobe Illustrator, Adobe Photoshop, Adobe Indesign</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Award</h6>
-                            <span><a href="http://winners.aigahonolulu.org/hallowbaloo-website" target="_blank">Hawaii
+                            <p><a href="http://winners.aigahonolulu.org/hallowbaloo-website" target="_blank">Hawaii
                                     5-0 Design Award</a>
-                            </span>
+                            </p>
                         </li>
                     </ul>
                 </div>
@@ -154,7 +154,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
