--- a/outrigger.html
+++ b/outrigger.html
@@ -103,13 +103,13 @@
                         <div class="margin-bottom-30">
                             <p>I developed static web banner campaigns, animated web banners and html emails for Outrigger. </p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Wall to Wall Studios</span>
+                            <p>Wall to Wall Studios</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Photoshop, Adobe Illustrator, HTML5, CSS</span>
+                            <p>Adobe Photoshop, Adobe Illustrator, HTML5, CSS</p>
                         </li>
                     </ul>
                 </div>
@@ -139,7 +139,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
