--- a/studiomom.html
+++ b/studiomom.html
@@ -103,13 +103,13 @@
                         <div class="margin-bottom-30">
                             <p>Studio Mom helps moms find their mom tribe. The client was seeking something light, clean, modern and flexible.</p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Studio Mom</span>
+                            <p>Studio Mom</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator</span>
+                            <p>Adobe Illustrator</p>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
