--- a/ewa.html
+++ b/ewa.html
@@ -98,19 +98,19 @@
                 <!-- Sidebar -->
                 <div class="col-12 col-lg-3">
                     <ul class="list-unstyled">
-                        <h4>EWA - Energy Web Atlas
+                        <h4>Energy Web Atlas
                         </h4>
                         <div class="margin-bottom-30">
                             <p>A new digital product created by Gulf Energy Information. Management wanted a logo that looked professional, masculine, and modern.</p>
                             <p>The logo is used both in print and web assets including, marketing collateral, signage, print ads, web banners, and powerpoints.</p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Gulf Energy Information</span>
+                            <p>Gulf Energy Information</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator, Adobe Indesign, Adobe Photoshop</span>
+                            <p>Adobe Illustrator, Adobe Indesign, Adobe Photoshop</p>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
