--- a/friendfinder.html
+++ b/friendfinder.html
@@ -104,9 +104,9 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>JavaScript, Node, Express, NPM Packages, Bootstrap, HTML5, CSS, Media Queries</span>
+                            <p>JavaScript, Node, Express, NPM Packages, Bootstrap, HTML5, CSS, Media Queries</p>
                         </li>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
                             <ul class="list-horizontal-unstyled">
                                 <li>
@@ -137,7 +137,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
