--- a/mcedd.html
+++ b/mcedd.html
@@ -103,13 +103,13 @@
                         <div class="margin-bottom-30">
                             <p>MCEDD sought a brand refresh for their successful annual conference. The client was looking for something conventional and professional.</p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Gulf Energy Information</span>
+                            <p>Gulf Energy Information</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Illustrator</span>
+                            <p>Adobe Illustrator</p>
                         </li>
                     </ul>
                 </div>
@@ -129,7 +129,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
