--- a/plantos.html
+++ b/plantos.html
@@ -105,12 +105,12 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Sitemap, design mock ups, JavaScript, Node, Express, NPM Packages, MySQL, Sequelize, Passport, Moment.js, Handlebars, Heroku, Bootstrap, HTML5, SCSS, Media Queries, Adobe Illustrator</span>
+                            <p>Sitemap, design mock ups, JavaScript, Node, Express, NPM Packages, MySQL, Sequelize, Passport, Moment.js, Handlebars, Heroku, Bootstrap, HTML5, SCSS, Media Queries, Adobe Illustrator</p>
                         </li>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
                             <ul class="list-horizontal-unstyled">
-                                <li>
+                                <li class="margin-bottom-20">
                                     <a href="https://github.com/DMFletcher/Plantos" target="blank">
                                         <i class="fab fa-github-alt social"></i>
                                     </a>
@@ -147,7 +147,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
