--- a/remembrance.html
+++ b/remembrance.html
@@ -106,7 +106,7 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</span>
+                            <p>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</p>
                         </li>
                     </ul>
                 </div>
@@ -145,7 +145,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
