--- a/richardavedon.html
+++ b/richardavedon.html
@@ -105,7 +105,7 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Indesign, Adobe Photoshop</span>
+                            <p>Adobe Indesign, Adobe Photoshop</p>
                         </li>
                     </ul>
                 </div>
@@ -130,7 +130,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
