--- a/stockmarketpets.html
+++ b/stockmarketpets.html
@@ -18,6 +18,7 @@
     <!-- Fonts/Icons -->
     <link href="./assets/plugins/font-awesome/css/all.css" rel="stylesheet">
     <link href="./assets/plugins/themify/themify-icons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
 </head>
 
 <body data-preloader="2">
@@ -105,7 +106,7 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Site map, wireframes, design mockups, mood boards, React, Reactstrap, SASS, SCSS, Media Queries, Bootstrap, HTML5, Github, Adobe Illustrator</span>
+                            <p>Site map, wireframes, design mockups, mood boards, React, Reactstrap, SASS, SCSS, Media Queries, Bootstrap, HTML5, Github, Adobe Illustrator</p>
                         </li>
                         <li>
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
@@ -151,7 +152,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
