--- a/takeahike.html
+++ b/takeahike.html
@@ -105,10 +105,10 @@
                         </div>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Sitemap, design mock ups, HTML5, CSS3, Bootstrap, JavaScript, jQuery, AJAX calls, Hiking
-                                APIs, Google Firebase, and Google Maps API</span>
+                            <p>Sitemap, design mock ups, HTML5, CSS3, Bootstrap, JavaScript, jQuery, AJAX calls, Hiking
+                                APIs, Google Firebase, and Google Maps API</p>
                         </li>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Project Links</h6>
                             <ul class="list-horizontal-unstyled">
                                 <li>
@@ -145,7 +145,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
