--- a/trueamerican.html
+++ b/trueamerican.html
@@ -103,13 +103,13 @@
                         <div class="margin-bottom-30">
                             <p>Book design for WWII veteran sold at Pearl Harbor on Oahu, Hawaii. </p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Pacific Historic Parks</span>
+                            <p>Pacific Historic Parks</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</span>
+                            <p>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</p>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
