--- a/wo-mediakit.html
+++ b/wo-mediakit.html
@@ -103,13 +103,13 @@
                         <div class="margin-bottom-30">
                             <p>The 2019 edition of the annual World Oil media kit.</p>
                         </div>
-                        <li>
+                        <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Company</h6>
-                            <span>Gulf Energy Information</span>
+                            <p>Gulf Energy Information</p>
                         </li>
                         <li class="margin-bottom-20">
                             <h6 class="heading-uppercase no-margin">Tech Used</h6>
-                            <span>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</span>
+                            <p>Adobe Indesign, Adobe Photoshop, Adobe Illustrator</p>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
     </div>
 
     <footer>
-        <div class="footer bg-grey">
+        <div class="footer bg-dark">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 text-center text-md-left">
