added fonts to all pages

--- a/stockmarketpets.html
+++ b/stockmarketpets.html
@@ -19,6 +19,7 @@
     <link href="./assets/plugins/font-awesome/css/all.css" rel="stylesheet">
     <link href="./assets/plugins/themify/themify-icons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Signika:300" rel="stylesheet">
 </head>
 
 <body data-preloader="2">
